# IA_Personal_Secretaire

./: .env.example  .gitignore  README.md  config.yaml.example  main.py  pyproject.toml  spec.md  start.command
app/: __init__.py  config.py
app/db/: __init__.py  connection.py  migrations.py  schema.sql
app/models/: __init__.py  analysis.py  archive.py  drive.py  task.py
app/services/: __init__.py  analysis_client.py  analysis_pipeline.py  analysis_prompt.py  archive_service.py  autopilot_service.py  calendar_service.py  chronodrive_driver.py  db_maintenance.py  drive_analysis_pipeline.py  drive_base_driver.py  (+18 more)
scripts/: backup_db.py  com.lala.backup_db.plist  init_db.py  inspect_leclerc_fiche.py
tests/: conftest.py  test_analysis_logging.py  test_archive_search.py  test_calendar_service.py  test_db_isolation.py  test_db_maintenance.py  test_drive_analysis_client.py  test_drive_analysis_pipeline.py  test_drive_cart_parser.py  test_drive_driver_factory.py  test_drive_mapping.py  test_drive_models.py  test_drive_pdf_service.py  test_drive_platform_switch.py  test_drive_prompt.py  test_drive_quantities.py  test_drive_ui_state.py  test_drive_url_helpers.py  test_email_scheduler.py  test_frequence.py  test_ged_naming.py  test_gemini_client.py  test_gemini_logging.py  test_google_theme.py  test_inbox_ingest.py  test_inbox_queue.py  test_inbox_ui_safe.py  test_listen_port.py  test_notification_service.py  test_ollama_mock.py  test_openrouter_client.py  test_recurrence.py  test_tags.py  test_task_expansion.py  test_task_search.py  test_task_service.py  test_task_status.py
(+25 files in other folders)
