[project]
name = "trankil-v2"
version = "0.1.0"
description = "Assistant secrétaire local-first pour Mac"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "pdf2image>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
